ingress/magical-nginx-dep-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: magical-nginx-svc
spec:
  type: NodePort
  selector:
    app: magical-nginx
  ports:
  - protocol: TCP
    port: 80
    nodePort: 31304
    name: tcp
