ingress/nginx-dep-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-official-svc
spec:
  type: NodePort
  selector:
    app: nginx-official
  ports:
  - protocol: TCP
    port: 80
    nodePort: 31303
